# FastAPI-Backend-Template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  responses.py
app/core/security/: __init__.py  encryption.py  jwt.py  password.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base.py  item.py  refresh_token.py  user.py
app/repositories/: __init__.py  base.py  item_repository.py  refresh_token_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  health.py  items.py  users.py
app/schemas/: __init__.py  auth_schemas.py  base.py  common_schemas.py  item_schemas.py  user_schemas.py
app/services/: __init__.py  auth_service.py  item_service.py  user_service.py
migrations/: env.py
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_items.py  test_users.py
